add Ex and tests